--- a/moviegram/src/Components/NewsFeed/styles.css
+++ b/moviegram/src/Components/NewsFeed/styles.css
@@ -1,4 +1,16 @@
-#webpage-menu {
-  line-height: 5;
-  justify-content: center;
+.pageFeed {
+	top: 100px;
+	position: relative;
 }
+
+.webpage-menu {
+  	width: 300px;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.headerText {
+    text-align: center;
+    font-size: large;
+ }
