added the MainMenuBar component, added the menu bar to the news feed page, added search bar to news feed page, and lastly added header text for news feed page

--- a/moviegram/src/Components/NewsFeed/styles.css
+++ b/moviegram/src/Components/NewsFeed/styles.css
@@ -1,16 +1,30 @@
 .pageFeed {
-	top: 100px;
+	top: 10px;
+	bottom: 50px;
 	position: relative;
 }
 
-.webpage-menu {
-  	width: 300px;
+.searchMovieform {
+    width: 800px;
     position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    top: 30px;
+}
+
+
+.pageHeader {
+    position: relative;
+    width: 800px;
+    border-width: 2px;
+    border-color: black;
+    top: 30px;
     margin-left: auto;
     margin-right: auto;
 }
 
 .headerText {
-    text-align: center;
-    font-size: large;
- }
+	text-align: center;
+	font-family: Impact, Charcoal, sans-serif;
+}
+
