did following actions: (1) changed the css to the menu bar to add more width and center align the buttons in the list properly. (2) created a Review component that can be resused as a template for reviews that will be added to the feed. (3) added mock reviews to the feed by hardcoding data in.

--- a/moviegram/src/Components/MainMenuBar/styles.css
+++ b/moviegram/src/Components/MainMenuBar/styles.css
@@ -2,14 +2,14 @@
 	padding: 10px;
 	background-color: lightgray;
 	align-content: center;
-	width: 100%
+	width: 100%;
 }
 
 #mainMenuBar ul {
-	margin: 0px;
 	padding: 3px;
-	align-items: left;
-	margin-left: 390px;
+	align-items: center;
+	display: flex;
+  	justify-content: center;
 }
 
 #mainMenuBar ul li {
@@ -21,5 +21,5 @@
 }
 
 .mainMenu-btn {
-	width: 185px;
+	width: 300px;
 }
