--- a/moviegram/src/Components/NewsFeed/styles.css
+++ b/moviegram/src/Components/NewsFeed/styles.css
@@ -10,14 +10,13 @@
     margin-left: auto;
     margin-right: auto;
     top: 30px;
+    justify-content: center;
 }
 
 
 .pageHeader {
     position: relative;
     width: 800px;
-    border-width: 2px;
-    border-color: black;
     top: 30px;
     margin-left: auto;
     margin-right: auto;
