already registered button

--- a/moviegram/src/Components/Signup/styles.css
+++ b/moviegram/src/Components/Signup/styles.css
@@ -14,8 +14,17 @@
     width: 100%;
 }
 
-
 .welcomeText {
     text-align: center;
     font-size: large;
   }
+
+.registeredButtonBox {
+    height: 50px;
+}
+
+.alreadyRegisteredButton {
+    margin: 5px;
+    right: 0px;
+    position: absolute;
+}
