--- a/moviegram/src/Components/Login/styles.css
+++ b/moviegram/src/Components/Login/styles.css
@@ -20,4 +20,14 @@
     text-align: center;
     font-size: large;
   }
+
+  .notRegisteredButtonBox {
+    height: 50px;
+}
+
+.notRegisteredButton {
+    margin: 5px;
+    right: 0px;
+    position: absolute;
+}
   
