--- a/moviegram/src/Components/MainMenuBar/styles.css
+++ b/moviegram/src/Components/MainMenuBar/styles.css
@@ -8,8 +8,9 @@
 #mainMenuBar ul {
 	padding: 3px;
 	align-items: center;
-	display: flex;
-  	justify-content: center;
+  	display: flex;
+    align-items: stretch;
+    justify-content: center;
 }
 
 #mainMenuBar ul li {
@@ -21,5 +22,8 @@
 }
 
 .mainMenu-btn {
-	width: 300px;
+	width: 200px;
+	height: 40px;
+	text-align: center;
+	justify-content: center;
 }
