--- a/moviegram/src/Components/NewsFeed/styles.css
+++ b/moviegram/src/Components/NewsFeed/styles.css
@@ -27,3 +27,10 @@
 	font-family: Impact, Charcoal, sans-serif;
 }
 
+.reviewsFeedTbl {
+	width: 800px;
+	position: relative;
+	margin-left: auto;
+	margin-right: auto;
+}
+
