--- a/moviegram/src/Components/MainMenuBar/styles.css
+++ b/moviegram/src/Components/MainMenuBar/styles.css
@@ -22,8 +22,15 @@
 }
 
 .mainMenu-btn {
+	width: 50px;
+	height: 50px;
+	justify-content: center;
+	margin-right: 40px;
+}
+
+.edge-btn {
 	width: 200px;
-	height: 40px;
+	height: 50px;
 	text-align: center;
 	justify-content: center;
 }
