--- a/moviegram/src/Components/MainMenuBar/styles.css
+++ b/moviegram/src/Components/MainMenuBar/styles.css
@@ -1,19 +1,24 @@
 #mainMenuBar {
-	padding: 10px;
+	margin-top: 0px;
+	height: 100px;
+	padding-top: 10px;
+	padding-left: 10px;
+	padding-right: 10px;
 	background-color: lightgray;
-	align-content: center;
+	display: flex;
+   	align-items: center; 
+   	justify-content: center;
 	width: 100%;
 }
 
-#mainMenuBar ul {
-	padding: 3px;
-	align-items: center;
+#menuItems ul {
+	padding: 10px;
   	display: flex;
     align-items: stretch;
     justify-content: center;
 }
 
-#mainMenuBar ul li {
+#menuItems ul li {
 	margin-right: 20px;
 	font-weight: bold;
 	list-style: none;
@@ -25,7 +30,6 @@
 	width: 50px;
 	height: 50px;
 	justify-content: center;
-	margin-right: 40px;
 }
 
 .edge-btn {
