--- a/moviegram/src/Components/Review/styles.css
+++ b/moviegram/src/Components/Review/styles.css
@@ -1,5 +1,5 @@
 #review {
-	width: 800px;
+	width: 1000px;
 	position: relative;
     margin-left: auto;
     margin-right: auto;
@@ -8,6 +8,7 @@
     bottom: 20px;
     border: 2px solid black;
     border-radius: 10px;
+    background-color: #afeeee;
 }
 
 #review ul {
