--- a/moviegram/src/Components/NewsFeed/styles.css
+++ b/moviegram/src/Components/NewsFeed/styles.css
@@ -10,8 +10,9 @@
     margin-left: auto;
     margin-right: auto;
     top: 30px;
-    justify-content: center;
-}
+	  align-items: center;
+	  justify-content: center;
+	}
 
 
 .pageHeader {
