--- a/moviegram/src/Components/UserProfile/styles.css
+++ b/moviegram/src/Components/UserProfile/styles.css
@@ -1,20 +1,25 @@
 
-.userProfile {
-	top: 10px;
-	bottom: 50px;
+#userProfile {
+	/* top: 10px;
+	bottom: 50px; */
+	height: 100vh;
+	width: 100%;
+	margin: 0;
+	/* background-color: green; */
 	/* position: relative; */
 }
 
-/* .bodyHeader {
-  width: 1030px;
-	position: relative;
-} */
+#bodyHeader {
+  width: 100%;
+	height: 200px;
+	/* position: relative; */
+}
 
 #profilePicContainer {
 	height: 200px;
-	width: 500px;
+	width: 300px;
 	float: left;
-	background-color: white;
+	background-color: blue;
 }
 
 .profilePic {
@@ -28,9 +33,10 @@
 }
 
 #profileInfo {
-	height: 200px;
 	background-color: red;
-	/* float: right; */
+	height: 200px;
+	width: 70%;
+	float: left;
 	/* position: relative; */
 }
 
@@ -40,7 +46,7 @@
 	/* Add properties below */
 	/* width: 300px;
 	height: 300px; */
-	margin-top: 10px;
+	/* margin-top: 10px; */
   margin-left: 40px;
 	position: relative;
 
