--- a/moviegram/src/Components/UserProfile/styles.css
+++ b/moviegram/src/Components/UserProfile/styles.css
@@ -11,7 +11,7 @@
 
 #bodyHeader {
   width: 100%;
-	height: 200px;
+	height: 220px;
 	/* position: relative; */
 }
 
@@ -19,7 +19,8 @@
 	height: 200px;
 	width: 300px;
 	float: left;
-	background-color: blue;
+	margin-top: 20px;
+	/* background-color: blue; */
 }
 
 .profilePic {
@@ -35,8 +36,10 @@
 #profileInfo {
 	background-color: red;
 	height: 200px;
-	width: 70%;
+	width: 500px;
 	float: left;
+	margin-left: 100px;
+	margin-top: 20px;
 	/* position: relative; */
 }
 
@@ -50,4 +53,19 @@
   margin-left: 40px;
 	position: relative;
 
+}
+
+#infoHeader {
+	width: 100%;
+	background-color: yellow;
+}
+
+#userName {
+	font-weight: 300;
+	font-size: 30px;
+	/* font-family: "Comic Sans MS", cursive, sans-serif; */
+}
+.editButton {
+	margin-left: 50px;
+	margin-bottom: 10px;
 }
