--- a/moviegram/src/Components/UserProfile/styles.css
+++ b/moviegram/src/Components/UserProfile/styles.css
@@ -34,7 +34,7 @@
 }
 
 #profileInfo {
-	background-color: red;
+	/* background-color: red; */
 	height: 200px;
 	width: 500px;
 	float: left;
@@ -43,21 +43,9 @@
 	/* position: relative; */
 }
 
-.profileDescription {
-  background-color: green;
-
-	/* Add properties below */
-	/* width: 300px;
-	height: 300px; */
-	/* margin-top: 10px; */
-  margin-left: 40px;
-	position: relative;
-
-}
-
 #infoHeader {
 	width: 100%;
-	background-color: yellow;
+	/* background-color: yellow; */
 }
 
 #userName {
@@ -68,4 +56,28 @@
 .editButton {
 	margin-left: 50px;
 	margin-bottom: 10px;
+}
+
+#infoStats {
+	width: 100%;
+	/* background-color: green; */
+}
+
+#totalReviews {
+	font-weight: bold;
+}
+
+#totalFollowers {
+	font-weight: bold;
+	margin-left: 20px;
+}
+
+#totalFollowing {
+	font-weight: bold;
+	margin-left: 20px;
+}
+
+#userDescription {
+	margin-top: 20px;
+	/* background-color: blue; */
 }
