--- a/moviegram/src/Components/Home/styles.css
+++ b/moviegram/src/Components/Home/styles.css
@@ -10,40 +10,39 @@
 	background-size: 100% 100%;
 	width: 100%;
 	height: 100%;
-	
+	float: left;
 	
 }
 
-.searchMovieform {
+.searchMovie{
     width: 800px;
     margin-left: auto;
     margin-right: auto;
-    top: 300px;
+    top: 18%;
     justify-content: center;
+    position: relative;
 }
 
 .searchButton {
-	position: absolute;
+	position: relative;
     width: 10%;
-    margin-left: 80%;
-    top: 50%;
+    left: 80%;
+    top: 11%;
 }
 
 .Login_Signup{
-
-}
-
-.Login_SignupButton{
-	position: absolute;
+	position: relative;
 	width: 15%;
-	margin-left: 45%;
-	top: 60%;
-
+	left: 45%;
+	top: 20%;
 }
+
 
 .Banner{
-	margin-top: 150px;
-	margin-left: 300px;
+	position: relative;
+	top: 15%;
+	left: 12%;
+	
 }
 .Banner img{
 	width: 75%;
