--- a/moviegram/src/Components/MainMenuBar/styles.css
+++ b/moviegram/src/Components/MainMenuBar/styles.css
@@ -4,7 +4,7 @@
 	padding-top: 10px;
 	padding-left: 10px;
 	padding-right: 10px;
-	background-color: lightgray;
+	background-color: #383838;
 	display: flex;
   align-items: center;
   justify-content: center;
