--- a/moviegram/src/Components/NewsFeed/styles.css
+++ b/moviegram/src/Components/NewsFeed/styles.css
@@ -1,7 +1,10 @@
 .pageFeed {
-	top: 0px;
-	bottom: 50px;
+	margin-top: 0px;
+	margin-bottom: 0px;
 	position: relative;
+	background-color: #202020;
+	width: 100%;
+	height: 100%;
 }
 
 .searchMovieform {
@@ -12,6 +15,7 @@
     top: 30px;
 	  align-items: center;
 	  justify-content: center;
+		background-color: #202020;
 	}
 
 
@@ -27,11 +31,13 @@
 	text-align: center;
 	font-family: Impact, Charcoal, sans-serif;
 	font-size: 45px;
+	color: white;
 }
 
-.reviewsFeedTbl {
-	width: 800px;
+.revs {
+	width: 1000px;
 	position: relative;
+	justify-content: center;
 	margin-left: auto;
 	margin-right: auto;
 }
