--- a/moviegram/src/Components/AddReview/styles.css
+++ b/moviegram/src/Components/AddReview/styles.css
@@ -1,7 +1,6 @@
 #addreviewmain {
 	width: 100%;
 	height: 100vh;
-	background-color: lightgray;
 }
 
 .headerText {
@@ -21,7 +20,8 @@
     bottom: 20px;
     border: 2px solid black;
     border-radius: 10px;
-		background-color: #afeeee;
+		background-color: #008080;
+		color: white;
 }
 
 .add-review ul {
