--- a/moviegram/src/Components/NewsFeed/styles.css
+++ b/moviegram/src/Components/NewsFeed/styles.css
@@ -14,7 +14,11 @@
     top: 30px;
 	  align-items: center;
 	  justify-content: center;
-	}
+}
+
+.searchBar {
+	background-color: white;
+}
 
 
 .pageHeader {
