added alot of changes :- (1) added fucntion constructors to store state in components where needed. (2) added functions in all places where onChange was needed to handled by forms. (3) added onClick functions whereever needed. (4) added styling changes and other css and layout changes to most webpages. (5) added comments to all of my files whereever needed.

--- a/moviegram/src/Components/NewsFeed/styles.css
+++ b/moviegram/src/Components/NewsFeed/styles.css
@@ -17,13 +17,15 @@
 }
 
 .searchBar {
+	width: 910px;
+	padding-right: 10px;
 	background-color: white;
 }
 
 
 .pageHeader {
     position: relative;
-    width: 800px;
+    width: 1000px;
     top: 35px;
     margin-left: auto;
     margin-right: auto;
