--- a/moviegram/src/Components/Review/styles.css
+++ b/moviegram/src/Components/Review/styles.css
@@ -35,16 +35,23 @@
 
 .content {
 	display: flex;
-    align-items: stretch;
-    justify-content: space-between;
-    width: 100%;
-    padding: 15px;
-    text-align: justify;
+  align-items: stretch;
+  justify-content: space-between;
+  width: 100%;
+  padding: 15px;
+	padding-bottom: 5px;
+  text-align: justify;
+}
+
+.datetime {
+	padding-left: 15px;
+	color: #484848;
 }
 
 .comments {
 	border-radius: 10px;
 	padding: 15px;
+	margin-top: 10px;
 	margin-left: 10px;
 	margin-right: 10px;
 	margin-bottom: 10px;
