--- a/moviegram/src/Components/universalStyles.css
+++ b/moviegram/src/Components/universalStyles.css
@@ -1,3 +1,13 @@
-.pageFeed, #addreviewmain {
+.pageFeed, #addreviewmain, .searchBar {
   background-color: #202020;
+}
+
+.reviewUserPic {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.reviewUserPicLi {
+	padding-right: 15px;
 }
