--- a/moviegram/src/Components/AddReview/styles.css
+++ b/moviegram/src/Components/AddReview/styles.css
@@ -1,7 +1,6 @@
 #addreviewmain {
 	width: 100%;
 	height: 100vh;
-	background-color: lightgray;
 }
 
 .headerText {
@@ -12,7 +11,7 @@
 .add-review {
     width: 1000px;
 		height: auto;
-    min-height: 500px;
+    min-height: 520px;
     position: relative;
     margin-left: auto;
     margin-right: auto;
@@ -21,12 +20,11 @@
     bottom: 20px;
     border: 2px solid black;
     border-radius: 10px;
-		background-color: #afeeee;
+		background-color: #008080;
+		color: white;
 }
 
 .add-review ul {
-    display: flex;
-    align-items: stretch;
     justify-content: space-between;
     width: 100%;
     padding-left: 15px;
