--- a/moviegram/src/Components/NewsFeed/styles.css
+++ b/moviegram/src/Components/NewsFeed/styles.css
@@ -1,7 +1,9 @@
 .pageFeed {
-	top: 0px;
-	bottom: 50px;
+	margin-top: 0px;
+	margin-bottom: 0px;
 	position: relative;
+	width: 100%;
+	height: 100%;
 }
 
 .searchMovieform {
@@ -10,13 +12,20 @@
     margin-left: auto;
     margin-right: auto;
     top: 30px;
-    justify-content: center;
+	  align-items: center;
+	  justify-content: center;
+}
+
+.searchBar {
+	width: 910px;
+	padding-right: 10px;
+	background-color: white;
 }
 
 
 .pageHeader {
     position: relative;
-    width: 800px;
+    width: 1000px;
     top: 35px;
     margin-left: auto;
     margin-right: auto;
@@ -26,11 +35,13 @@
 	text-align: center;
 	font-family: Impact, Charcoal, sans-serif;
 	font-size: 45px;
+	color: white;
 }
 
-.reviewsFeedTbl {
-	width: 800px;
+.revs {
+	width: 1000px;
 	position: relative;
+	justify-content: center;
 	margin-left: auto;
 	margin-right: auto;
 }
