Created modal for the list of users following

--- a/moviegram/src/Components/UserProfile/styles.css
+++ b/moviegram/src/Components/UserProfile/styles.css
@@ -88,3 +88,24 @@
 	width: 100px;
 	height: 200px;
 }
+
+.editModel {
+	height: 400px;
+	width: 350px;
+	position: absolute;
+  top: 200px;
+  left: 400px;
+  right: 200px;
+  bottom: 200px;
+	background-color: #fff;
+	border-radius: 12px;
+}
+
+.Overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,.65);
+  }
