--- a/moviegram/src/Components/Movie/flex.css
+++ b/moviegram/src/Components/Movie/flex.css
@@ -1,13 +1,13 @@
 .movieContainer{
     flex-direction: row;
     width: 800px;
-    display: flex;
     height: 400px;
+    display: flex;
 }
 
 .imgContainer {
     height: 400px;
-    width: 300px;
+    flex: 1;
 }
 
 .imgContainer.img {
@@ -17,16 +17,15 @@
 
 
 .contentContainer{
-
     height: 400px;
     width: 500px;
+    flex: 3;
 }
-
 
 
 .titleContainer{
     height: 100px;
-    width: 500px;
+    flex: 3;
 }
 
 .titleContainer.p{
@@ -35,7 +34,7 @@
 
 .descriptionContainer{
     height: 200px;
-    width: 500px;
+    flex: 3;
 }
 
 .descriptionContainer.p{
