--- a/moviegram/src/Components/Movie/styles.css
+++ b/moviegram/src/Components/Movie/styles.css
@@ -1,43 +1,54 @@
 .movieContainer{
     flex-direction: row;
-    width: 800px;
+    width: 1000px;
+    height: 600px;
     display: flex;
-    height: 400px;
 }
 
 .imgContainer {
-    height: 400px;
-    width: 300px;
+    margin: 2px;
+    border-style: dashed;
+    height: 600px;
+    width: 500px;
 }
 
-.imgContainer.img {
-    height: 100%;
-    width: 100%;
+.movieImage {
+
+    height:100%; width:100%;
 }
 
 
 .contentContainer{
-
-    height: 400px;
+    height: 600px;
     width: 500px;
 }
 
 
 
 .titleContainer{
-    height: 100px;
+    border-top-style: ridge;
+    border-left-style: ridge;
+    border-right-style: ridge;
+
+    background-color: lightgrey;
+    display: flex;
+    height: 200px;
     width: 500px;
+    align-items: center;
+    justify-content: center;
 }
 
-.titleContainer.p{
-    font-size: large;
+.title{
+    font-size: xx-large;
 }
 
 .descriptionContainer{
-    height: 200px;
+    border-style: ridge;
+    background-color: lightpink;
+    height: 400px;
     width: 500px;
 }
 
-.descriptionContainer.p{
+.description{
     font-size: small;
 }
