--- a/moviegram/src/Components/UserProfile/styles.css
+++ b/moviegram/src/Components/UserProfile/styles.css
@@ -111,16 +111,21 @@
   }
 
 .followModelHeader {
-	height: 20px;
+	height: 30px;
 	width: 350px;
 	float: left;
 	/* background-color: green; */
 	border-color: black;
 	text-align: center;
+	/* margin-bottom: 10px; */
+	font-weight: bold;
+	border-bottom: 1px solid grey;
+	/* padding-bottom: 5px; */
 }
 
 .followModelBody {
 	width: 350px;
-	height: 380px;
+	height: 360px;
 	float: left;
+	margin-top: 10px;
 }
