--- a/moviegram/src/Components/Movie/styles.css
+++ b/moviegram/src/Components/Movie/styles.css
@@ -1,11 +1,15 @@
 .movieContainer{
+    border-style: solid;
+    margin: 5px;
     flex-direction: row;
-    width: 1000px;
-    height: 600px;
+    width: 1020px;
+    height: 620px;
     display: flex;
 }
 
 .imgContainer {
+    top: 5px;
+    position: relative;
     margin: 2px;
     border-style: dashed;
     height: 600px;
@@ -19,6 +23,8 @@
 
 
 .contentContainer{
+    top: 5px;
+    position: relative;
     height: 600px;
     width: 500px;
 }
@@ -42,10 +48,27 @@
     font-size: xx-large;
 }
 
+.ratingContainer{
+    border-top-style: ridge;
+    border-left-style: ridge;
+    border-right-style: ridge;
+
+    background-color: lightgreen;
+    display: flex;
+    height: 50px;
+    width: 500px;
+    align-items: center;
+    justify-content: center;
+}
+
+.ratingText{
+    font-size: medium;
+}
+
 .descriptionContainer{
     border-style: ridge;
     background-color: lightpink;
-    height: 550px;
+    height: 500px;
     width: 500px;
 }
 
