--- a/moviegram/src/Components/Review/styles.css
+++ b/moviegram/src/Components/Review/styles.css
@@ -25,7 +25,7 @@
 
 #review ul li {
 	font-weight: bold;
-	font-family: "Comic Sans MS", cursive, sans-serif;
+	font-family: "Garamond", cursive, sans-serif;
 	font-size: 20px;
 	list-style: none;
 	text-align: center;
