--- a/moviegram/src/Components/Home/styles.css
+++ b/moviegram/src/Components/Home/styles.css
@@ -1,3 +1,4 @@
+
 .center {
   position: absolute;
   top: 50%;
@@ -11,38 +12,40 @@
 	width: 100%;
 	height: 100%;
 	float: left;
-	
+
 }
 
 .searchMovie{
     width: 800px;
     margin-left: auto;
     margin-right: auto;
-    top: 18%;
+    top: 45%;
+    left: 22%;
     justify-content: center;
-    position: relative;
+    position: absolute;
 }
 
 .searchButton {
-	position: relative;
+	position: absolute;
     width: 10%;
     left: 80%;
-    top: 11%;
+    top: 45%;
+    display: inline;
 }
 
 .Login_Signup{
-	position: relative;
+	position: absolute;
 	width: 15%;
 	left: 45%;
-	top: 20%;
+	top: 55%;
 }
 
 
 .Banner{
-	position: relative;
+	position: absolute;
 	top: 15%;
-	left: 12%;
-	
+	left: 20%;
+
 }
 .Banner img{
 	width: 75%;
