--- a/moviegram/src/Components/AddReview/styles.css
+++ b/moviegram/src/Components/AddReview/styles.css
@@ -35,7 +35,7 @@
 
 .add-review ul li {
     font-weight: bold;
-    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-family: "Garamond", cursive, sans-serif;
     font-size: 20px;
     list-style: none;
     text-align: center;
