--- a/moviegram/src/Components/universalStyles.css
+++ b/moviegram/src/Components/universalStyles.css
@@ -1,5 +1,9 @@
-.pageFeed, #addreviewmain, .searchBar {
+#pageFeed, #addreviewmain, #userProfile, .searchBar {
   background-color: #202020;
+  color: white;
+  height: 100%;
+  width: 100%;
+  padding-bottom: 10px;
 }
 
 .reviewUserPic {
