--- a/moviegram/src/Components/NewsFeed/styles.css
+++ b/moviegram/src/Components/NewsFeed/styles.css
@@ -5,6 +5,7 @@
     margin-left: auto;
     margin-right: auto;
     top: 30px;
+    margin-bottom: 10px;
 	  align-items: center;
 	  justify-content: center;
 }
@@ -29,12 +30,4 @@
 	font-family: Impact, Charcoal, sans-serif;
 	font-size: 45px;
 	color: white;
-}
-
-.revs {
-	width: 1000px;
-	position: relative;
-	justify-content: center;
-	margin-left: auto;
-	margin-right: auto;
 }
