--- a/moviegram/src/Components/AddReview/styles.css
+++ b/moviegram/src/Components/AddReview/styles.css
@@ -1,5 +1,4 @@
 #addreviewmain {
-	width: 100%;
 	height: 100vh;
 }
 
@@ -49,5 +48,12 @@
 
 .saveReviewBtn {
 	position: absolute;
-	right: 20px
+	right: 20px;
+	display: inline-block;
+}
+
+.cancelAddRevPage {
+	left: 770px;
+	position: absolute;
+	display: inline-block;
 }
