--- a/moviegram/src/Components/Signup/styles.css
+++ b/moviegram/src/Components/Signup/styles.css
@@ -4,6 +4,9 @@
     position: relative;
     margin-left: auto;
     margin-right: auto;
+    display: flex;
+
+    flex-direction: column;
 }
 
 .formContainer {
@@ -15,9 +18,15 @@
     width: 100%;
 }
 
+.addGenreButton{
+    margin-bottom: 5px;
+    width: 100%;
+}
+
 .welcomeText {
     text-align: center;
-    font-size: large;
+    font-size: x-large;
+
   }
 
 .registeredButtonBox {
@@ -28,4 +37,19 @@
     margin: 5px;
     right: 0px;
     position: absolute;
+}
+
+.checkBoxesContainer{
+    width: 100%;
+    height: 100%;
+}
+
+.selectImage{
+    width: 100%;
+    text-align: center;
+}
+
+.centerText{
+    width: 100%;
+    text-align: center;
 }
