--- a/moviegram/src/Components/AddReview/styles.css
+++ b/moviegram/src/Components/AddReview/styles.css
@@ -1,4 +1,5 @@
 #addreviewmain {
+	width: 100%;
 	height: 100vh;
 }
 
@@ -48,12 +49,5 @@
 
 .saveReviewBtn {
 	position: absolute;
-	right: 20px;
-	display: inline-block;
-}
-
-.cancelAddRevPage {
-	left: 770px;
-	position: absolute;
-	display: inline-block;
+	right: 20px
 }
