--- a/moviegram/src/Components/Movie/styles.css
+++ b/moviegram/src/Components/Movie/styles.css
@@ -119,10 +119,10 @@
     font-size: medium;
 }
 
-.descriptionContainer{
+.descriptionContainerM{
     border-style: ridge;
     background-color: lightpink;
-    height: 500px;
+    height: 250px;
     width: 500px;
 }
 
