Implemented the add movie functionality for the admin

--- a/moviegram/src/Components/universalStyles.css
+++ b/moviegram/src/Components/universalStyles.css
@@ -1,4 +1,4 @@
-#pageFeed, #addreviewmain, #userProfile, .searchBar {
+#pageFeed, #addreviewmain, #userProfile, #AdminFeed .searchBar {
   background-color: #202020;
   color: white;
   height: 100%;
