--- a/moviegram/src/Components/AddMovie/styles.css
+++ b/moviegram/src/Components/AddMovie/styles.css
@@ -4,13 +4,14 @@
 
 .headerText {
     text-align: center;
+    padding-top: 10px;
     font-family: Impact, Charcoal, sans-serif;
 }
 
 .Add-Movie {
     width: 1000px;
 		height: auto;
-    min-height: 520px;
+    min-height: 655px;
     position: relative;
     margin-left: auto;
     margin-right: auto;
