--- a/moviegram/src/Components/Home/styles.css
+++ b/moviegram/src/Components/Home/styles.css
@@ -6,6 +6,7 @@
   transform: translate(-50%, -50%);
 }
 
+
 .Background{
 	background-image: url("./static/Home.jpg");
 	background-size: 100% 100%;
@@ -16,38 +17,43 @@
 }
 
 .searchMovie{
-    width: 800px;
-    margin-left: auto;
-    margin-right: auto;
-    top: 45%;
-    left: 22%;
-    justify-content: center;
-    position: absolute;
+  width: 100%;
+  position: relative;
+  top: 30px;
 }
 
+.Home{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+}
+
+.HomeContent{
+  display: flex;
+  width:50%;
+  flex-direction: column;
+  align-items: center;
+
+}
 .searchButton {
-	position: absolute;
-    width: 10%;
-    left: 80%;
-    top: 45%;
-    display: inline;
 }
 
 .Login_Signup{
-	position: absolute;
-	width: 15%;
-	left: 45%;
-	top: 55%;
 }
 
 
 .Banner{
-	position: absolute;
-	top: 15%;
-	left: 20%;
-
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 .Banner img{
-	width: 75%;
+	width: 100%;
 	height: 100%;
+}
+
+.spacingBox{
+  height: 50px;
 }
