--- a/moviegram/src/Components/Home/styles.css
+++ b/moviegram/src/Components/Home/styles.css
@@ -26,7 +26,7 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  flex-direction: column;
+  height: 100%;
   align-items: center;
 }
 
@@ -35,14 +35,7 @@
   width:50%;
   flex-direction: column;
   align-items: center;
-
 }
-.searchButton {
-}
-
-.Login_Signup{
-}
-
 
 .Banner{
   width: 100%;
