--- a/moviegram/src/Components/ReviewsList/styles.css
+++ b/moviegram/src/Components/ReviewsList/styles.css
@@ -3,4 +3,10 @@
   position: relative;
   margin-left: auto;
   margin-right: auto;
+  padding-bottom: 20px;
+}
+
+.norevs {
+  display: flex;
+  justify-content: center;
 }
