--- a/frontend/src/Components/Genre/styles.css
+++ b/frontend/src/Components/Genre/styles.css
@@ -2,3 +2,30 @@
     display: flex;
     justify-content: center;
 }
+
+.genreCard{
+    margin: 5px;
+    width: 500px;
+}
+
+.genreTitleBox {
+    position: relative;
+    /* margin-left: auto;
+    margin-right: auto; */
+    width: 200px;
+}
+.genreHeaderText {
+	text-align: center;
+	font-family: Impact, Charcoal, sans-serif;
+	font-size: 45px;
+	color: white;
+}
+
+
+#movieList{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
