--- a/frontend/src/Components/Admin/styles.css
+++ b/frontend/src/Components/Admin/styles.css
@@ -1,11 +1,19 @@
-#AdminFeed{
-
-}
-
-#AdminFeed h1 {
-  margin-left: 40%;
-}
-
 #AdminFeed Button {
   margin-left: 48%;
+  
+}
+
+.pageHeader {
+    position: relative;
+    width: 1000px;
+    top: 35px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.headerText {
+	text-align: center;
+	font-family: Impact, Charcoal, sans-serif;
+	font-size: 45px;
+	color: black;
 }
