movie name now redirects to movie page in reviews

--- a/frontend/src/Components/Review/styles.css
+++ b/frontend/src/Components/Review/styles.css
@@ -33,6 +33,11 @@
   flex: 0 1 auto;
 }
 
+#link {
+	color: white;
+  text-decoration: none;
+}
+
 .content {
 	display: flex;
   align-items: stretch;
