--- a/frontend/src/Components/AddMovie/styles.css
+++ b/frontend/src/Components/AddMovie/styles.css
@@ -29,13 +29,22 @@
 }
 
 .saveReviewBtn {
-	position: absolute;
-	right: 20px;
-	display: inline-block;
+	position: relative;
+	left: 425px;
+  width: 150px;
+}
+
+.addGenreButton {
+  position: absolute;
+  width: 150px;
+  left: 20px;
+  display: inline-block;
+
 }
 
 .cancelAddMoviePage {
-	left: 770px;
+	left: 825px;
 	position: absolute;
+  width: 150px;
 	display: inline-block;
 }
