--- a/frontend/src/Components/UserProfile/styles.css
+++ b/frontend/src/Components/UserProfile/styles.css
@@ -26,7 +26,7 @@
 #profileInfo {
 	/* background-color: red; */
 	height: 200px;
-	width: 500px;
+	width: 580px;
 	float: left;
 	margin-left: 100px;
 	margin-top: 20px;
@@ -159,4 +159,9 @@
 	border-radius: 50%;
 	/* margin-left: 80px;
 	margin-top: 0px; */
+}
+
+.editGenres {
+	margin-left: 10px;
+	margin-bottom: 10px;
 }
