fixed css and changes classNames to id to ensure no overlap and uniquness

--- a/frontend/src/Components/Admin/styles.css
+++ b/frontend/src/Components/Admin/styles.css
@@ -13,11 +13,11 @@
 	color: black;
 }
 
-.Revs {
+#Revs {
 
 }
 
-.AddMovieButton {
+#AddMovieButton {
   position: relative;
   top:30px;
   left: 47%;
