--- a/frontend/src/Components/universalStyles.css
+++ b/frontend/src/Components/universalStyles.css
@@ -1,4 +1,4 @@
-#pageFeed, #addreviewmain, #userProfile, #AdminFeed .searchBar {
+#pageFeed, #userProfile, #AdminFeed .searchBar {
   background-color: #202020;
   color: white;
   height: 100%;
@@ -10,6 +10,7 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
+  margin-right: 10px;
 }
 
 .reviewUserPicLi {
