--- a/frontend/src/Components/EditProfile/styles.css
+++ b/frontend/src/Components/EditProfile/styles.css
@@ -1,7 +1,7 @@
 
 #editProfileModal {
   width: 450px;
-	height: 440px;
+	height: 480px;
 	float: left;
   background-color: #008080;
   border-radius: 12px;
@@ -36,7 +36,7 @@
 
 .editProfileBody {
   width: 450px;
-	height: 320px;
+	height: 450px;
 	float: left;
 	/* margin-top: 10px; */
 }
@@ -84,4 +84,9 @@
   height: 238;
   margin-left: 20px;
   margin-right: 20px;
+}
+
+.editGenresComponent {
+	margin-left: 20px;
+	margin-top: 10px;
 }
