add review now has dropdown menu for movies instead of text field

--- a/frontend/src/Components/AddReview/styles.css
+++ b/frontend/src/Components/AddReview/styles.css
@@ -50,8 +50,10 @@
 	margin: 20px;
 }
 
-#reviewMovieName {
-	margin: 20px;
+#selectMovie, #option {
+	font-size: 20px;
+	width: 100%;
+	height: 40px;
 }
 
 #spoilerCheck {
