--- a/frontend/src/Components/Admin/styles.css
+++ b/frontend/src/Components/Admin/styles.css
@@ -1,3 +1,10 @@
+.AdminFeed{
+  background-color: #202020;
+  color: white;
+  height: 100%;
+  width: 100%;
+  padding-bottom: 30px;
+}
 #pagesHeader {
     position: relative;
     width: 1000px;
@@ -10,7 +17,7 @@
 	text-align: center;
 	font-family: Impact, Charcoal, sans-serif;
 	font-size: 45px;
-	color: black;
+	color: white;
 }
 
 .Revs {
