now add review takes the value of the spoiler check box and if the review has spoilers it will display a spoiler alert on top of that review

--- a/frontend/src/Components/Review/styles.css
+++ b/frontend/src/Components/Review/styles.css
@@ -33,6 +33,11 @@
   flex: 0 1 auto;
 }
 
+#spoilerTagR {
+	color: #ff9933;
+	text-align: center;
+}
+
 #link {
 	color: white;
   text-decoration: none;
