--- a/frontend/src/Components/ReviewAdmin/styles.css
+++ b/frontend/src/Components/ReviewAdmin/styles.css
@@ -33,6 +33,11 @@
   flex: 0 1 auto;
 }
 
+#spoilerTagRA {
+	color: #ff9933;
+	text-align: center;
+}
+
 #contents {
 	display: flex;
   align-items: stretch;
