--- a/frontend/src/Components/ReviewGeneric/styles.css
+++ b/frontend/src/Components/ReviewGeneric/styles.css
@@ -24,6 +24,11 @@
 	padding-left: 20px;
 }
 
+#spoilerTagRG {
+	color: #ff9933;
+	text-align: center;
+}
+
 #votes-upRG {
 	margin: 5px;
 	margin-left: 10px;
