--- a/frontend/src/Components/Review/styles.css
+++ b/frontend/src/Components/Review/styles.css
@@ -69,27 +69,6 @@
 	padding-left: 20px;
 }
 
-#newCom {
-	margin-left: 10px;
-	margin-right: 10px;
-	margin-bottom: 1px;
-	padding-left: 20px;
-}
-
-#writeCom {
-	padding-left: 10px;
-}
-
-#writeIt {
-	width: 810px;
-	padding-right: 10px;
-}
-
-#comBarR {
-	background-color: #303030;
-	color: white;
-}
-
 #votes-upR{
 	margin: 5px;
 	margin-left: 10px;
@@ -97,4 +76,9 @@
 
 #votes-downR{
 	margin: 5px;
+}
+
+#addRevButton {
+  margin-left: 20px;
+	margin-bottom: 10px;
 }
