--- a/frontend/src/Components/ReviewAdmin/styles.css
+++ b/frontend/src/Components/ReviewAdmin/styles.css
@@ -38,7 +38,18 @@
 	text-align: center;
 }
 
-#contents {
+#commentsRA {
+	border-radius: 10px;
+	padding: 15px;
+	margin-top: 10px;
+	margin-left: 10px;
+	margin-right: 10px;
+	margin-bottom: 10px;
+  border: 1px solid black;
+	padding-left: 20px;
+}
+
+#contentsRA {
 	display: flex;
   align-items: stretch;
   justify-content: space-between;
