--- a/frontend/src/Components/Admin/styles.css
+++ b/frontend/src/Components/Admin/styles.css
@@ -5,6 +5,9 @@
   width: 100%;
   padding-bottom: 30px;
 }
+.spaceBox{
+  height: 50px;
+}
 #pagesHeader {
     position: relative;
     width: 1000px;
