--- a/frontend/src/Components/Home/styles.css
+++ b/frontend/src/Components/Home/styles.css
@@ -37,7 +37,7 @@
   flex-direction: column;
   align-items: center;
   background-color: #202020;
-  color: white;
+  color: black;
   height: 100%;
   width: 100%;
   padding-bottom: 30px;
